# RaspberryPiWebcam

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  webcam.cpp
include/: Server.hpp
src/: CMakeLists.txt  Server.cpp
